refactor: Next.js => React + Vite + React Router
- Migrated from Next.js to Vite build system
- Replaced Next.js App Router with React Router DOM
- Updated all page components to use React Router navigation
- Converted Next.js layout to React Router layout with Outlet
- Updated floating header and create vote form to use React Router hooks
- Replaced Next.js Link components with React Router Link
- Set up proper font loading with @fontsource packages
- Configured Vite with TypeScript and path aliases
- Added Suspense boundaries with custom loading components
- Fixed Tailwind CSS content paths for Vite structure
- Added autoprefixer to PostCSS configuration
- Maintained all existing functionality and styling
- Cleaned up old Next.js specific files and configurations

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@fontsource/averia-libre": "^5.1.0",
+    "@fontsource/work-sans": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -39,7 +42,6 @@
     "@radix-ui/react-tooltip": "latest",
     "@web3-onboard/core": "^2.24.1",
     "@web3-onboard/injected-wallets": "^2.11.3",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -47,13 +49,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "next-themes": "^0.4.4",
     "react": "^18",
-    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^6.28.0",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -65,8 +65,12 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.4.10",
+    "vite-tsconfig-paths": "^5.1.2"
   }
 }
