--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.14.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "react": "^18",
@@ -68,6 +69,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5",
+    "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "vite": "^5.4.10",
