--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@fontsource/averia-libre": "^5.1.0",
-    "@fontsource/work-sans": "^5.1.0",
+    "@fontsource/averia-libre": "^5.2.6",
+    "@fontsource/work-sans": "^5.2.6",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -51,6 +51,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "react": "^18",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
