--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: 22.x
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+
       - name: Cache Node.js modules
         uses: actions/cache@v4
         with:
