--- a/package.json
+++ b/package.json
@@ -76,5 +76,6 @@
     "typescript": "^5",
     "vite": "^5.4.10",
     "vite-tsconfig-paths": "^5.1.2"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
