--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "latest",
     "@web3-onboard/core": "^2.24.1",
     "@web3-onboard/injected-wallets": "^2.11.3",
+    "@web3-onboard/react": "^2.11.0",
     "@web3-onboard/walletconnect": "^2.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
