chore(big query): add custom proxy url with ssl

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build DAVINCI UI
         run: pnpm build
+        env:
+          BIGQUERY_URL: https://bigquery.elboletaire.com
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
