--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build DAVINCI UI
         run: pnpm build
         env:
-          BIGQUERY_URL: https://bigquery.elboletaire.com
+          BIGQUERY_URL: https://c3.davinci.vote
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
