--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.28.0",
     "recharts": "2.15.0",
@@ -73,6 +74,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-mailchimp-subscribe": "^2.1.4",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5",
