--- a/package.json
+++ b/package.json
@@ -40,13 +40,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
+    "@reown/appkit": "^1.7.13",
+    "@reown/appkit-adapter-ethers": "^1.7.13",
     "@tanstack/react-query": "^5.81.2",
     "@uidotdev/usehooks": "^2.4.1",
     "@vocdoni/davinci-sdk": "github:vocdoni/davinci-sdk#f/ts-bundling",
-    "@web3-onboard/core": "^2.24.1",
-    "@web3-onboard/injected-wallets": "^2.11.3",
-    "@web3-onboard/react": "^2.11.0",
-    "@web3-onboard/walletconnect": "^2.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
