--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "vite": "^5.4.10",
+    "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.2"
   },
   "packageManager": "pnpm@10.12.1",
