feature: farcaster mini-app

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,6 +9,7 @@
       "~pages/*": ["pages/*"],
       "~router": ["router.tsx"],
       "~ui/*": ["components/ui/*"],
+      "~utils/*": ["utils/*"],
       "~src/*": ["./*"]
     }
   }
