--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@farcaster/miniapp-sdk": "^0.1.7",
     "@fontsource/averia-libre": "^5.2.6",
     "@fontsource/work-sans": "^5.2.6",
     "@hookform/resolvers": "^3.9.1",
