--- a/package.json
+++ b/package.json
@@ -74,17 +74,25 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/node": "^22",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
     "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
     "postcss": "^8.5",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
-    "vite": "^5.4.10",
+    "typescript-eslint": "^8.37.0",
+    "vite": "^7.0.5",
     "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.2"
   },
