--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ SEQUENCER_URL=https://sequencer1.davinci.vote
 BIGQUERY_URL=https://c3.davinci.vote
 PUBLIC_MAILCHIMP_URL=your_public_mailchimp_url_here
 SHARE_TEXT="A custom text to be shared, use {title/link/app} to insert the title, process and app links"
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your_alchemy_key_here
