add configurable Ethereum network support with validation
Add ETHEREUM_NETWORK environment variable
Support mainnet, sepolia, arbitrum, polygon, base, optimism and celo

Signed-off-by: p4u <pau@dabax.net>

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ SEQUENCER_URL=https://sequencer1.davinci.vote
 BIGQUERY_URL=https://c3.davinci.vote
 PUBLIC_MAILCHIMP_URL=your_public_mailchimp_url_here
 SHARE_TEXT="A custom text to be shared, use {title/link/app} to insert the title, process and app links"
+
+# Ethereum Network Configuration
+# Supported networks: mainnet, sepolia, arbitrum, polygon, base, optimism, celo
+# Defaults to sepolia if not specified
+ETHEREUM_NETWORK=sepolia
