autodetect web3 network based on Sequencer info
Signed-off-by: p4u <pau@dabax.net>

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,11 @@ SHARE_TEXT="A custom text to be shared, use {title/link/app} to insert the title
 
 # Ethereum Network Configuration
 # Supported networks: mainnet, sepolia, arbitrum, polygon, base, optimism, celo
-# Defaults to sepolia if not specified
-ETHEREUM_NETWORK=sepolia
+# 
+# If not specified, the network will be auto-detected from the sequencer.
+# If specified, the app will validate against the sequencer and warn on mismatch.
+# 
+# Leave commented out for auto-detection (recommended):
+#
+# Or uncomment and set explicitly if needed:
+# ETHEREUM_NETWORK=mainnet
