--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Build DAVINCI UI
         run: pnpm build
         env:
-          BIGQUERY_URL: https://c3.davinci.vote
           WALLETCONNECT_PROJECT_ID: f9218b6e0683d202d047f1c60de2d681
+          BIGQUERY_URL: https://c3-dev.davinci.vote
+          SEQUENCER_URL: https://sequencer-dev.davinci.vote
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
