--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.5",
     "vite-plugin-pwa": "^1.0.1",
-    "vite-tsconfig-paths": "^5.1.2"
+    "vite-tsconfig-paths": "^5.1.2",
+    "workbox-window": "^7.3.0"
   },
   "packageManager": "pnpm@10.12.1",
   "resolutions": {
