refactor(env vars): rename BIGQUERY_URL with CENSUS3_URL for clarity
refs #49

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 WALLETCONNECT_PROJECT_ID=your_project_id_here
 SEQUENCER_URL=https://sequencer1.davinci.vote
-BIGQUERY_URL=https://c3.davinci.vote
+CENSUS3_URL=https://c3.davinci.vote
 PUBLIC_MAILCHIMP_URL=your_public_mailchimp_url_here
 SHARE_TEXT="A custom text to be shared, use {title/link/app} to insert the title, process and app links"
 
 # Ethereum Network Configuration
 # Supported networks: mainnet, sepolia, arbitrum, polygon, base, optimism, celo
-# 
+#
 # If not specified, the network will be auto-detected from the sequencer.
 # If specified, the app will validate against the sequencer and warn on mismatch.
-# 
+#
 # Leave commented out for auto-detection (recommended):
 #
 # Or uncomment and set explicitly if needed:
