--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install
         run: pnpm i
 
+      - name: Test
+        run: pnpm test
+
       - name: Build DAVINCI UI
         run: pnpm build
         env:
