--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "tsc -b && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "tsc -b && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -81,11 +84,13 @@
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jsdom": "^27.3.0",
     "postcss": "^8.5",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
@@ -94,6 +99,7 @@
     "vite": "^7.0.5",
     "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^4.0.16",
     "workbox-window": "^7.3.0"
   },
   "packageManager": "pnpm@10.12.1"
