--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^22",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
