--- a/package.json
+++ b/package.json
@@ -19,33 +19,18 @@
     "@farcaster/miniapp-sdk": "^0.1.7",
     "@fontsource/averia-libre": "^5.2.6",
     "@fontsource/work-sans": "^5.2.6",
-    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
-    "@radix-ui/react-alert-dialog": "1.1.4",
-    "@radix-ui/react-aspect-ratio": "1.1.1",
-    "@radix-ui/react-avatar": "1.1.2",
     "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-context-menu": "2.2.4",
     "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-hover-card": "1.1.4",
     "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "1.1.4",
-    "@radix-ui/react-navigation-menu": "1.2.3",
-    "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/react-progress": "latest",
     "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "1.2.2",
     "@radix-ui/react-select": "latest",
     "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "1.2.2",
     "@radix-ui/react-slot": "latest",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "latest",
     "@radix-ui/react-toast": "1.2.4",
-    "@radix-ui/react-toggle": "1.1.1",
-    "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
     "@reown/appkit": "^1.8.15",
     "@reown/appkit-adapter-ethers": "^1.8.15",
@@ -54,26 +39,17 @@
     "@vocdoni/davinci-sdk": "~0.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
     "ethers": "^6.16.0",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "react": "^18",
-    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.28.0",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "up-fetch": "^2.1.6",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "up-fetch": "^2.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
@@ -82,8 +58,6 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
     "@types/react-mailchimp-subscribe": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.21",
